feat(wind-metrics): 添加实体标签管理和评估功能
- 引入 wind-integration-core 依赖
- 重构 WindTag 接口，添加 Serializable 支持并更新注解
- 废弃 getName 和 getValue 方法，新增 name 和 value 默认方法
- 新增 EntityTag 记录类用于业务标签对象管理
- 实现 EntityTagEvaluator 接口用于标签评估
- 创建 EntityTagger 接口提供对象打标功能
- 定义 EntityTagRepository 接口用于标签存储管理
- 添加 ImmutableTag 不可变标签实现
- 创建 TaggingResult 打标结果记录类
- 实现 TagSource 枚举定义标签来源优先级